# islandsense

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  predict.py  prep.py  pyproject.toml  railway.json  requirements.txt  train.py
data/: daily_jdi.csv  daily_risk.csv  exposure_by_sailing.csv  metocean.csv  per_sailing_predictions.csv  sailing_contrib.csv  sailing_scenario_deltas.csv  sailings.csv  scenario_impact.csv  status.csv  tides.csv  train_dataset.csv  weekly_jdi.csv  weekly_risk.csv
docs/: MILESTONES.md  SPEC.md
docs/data/: DATASETS.md  SCHEMA.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
metrics/: model_vs_baseline.txt  route_reliability.csv
models/: model_meta.json
scripts/: test_load.py
src/islandsense/: __init__.py  aggregate.py  allocator.py  api.py  app.py  config.py  features.py  metrics.py  model.py  optimizer.py  schema.py  synth.py  windows.py
tests/: test_aggregate.py
